// Vitest Snapshot v1

exports[`test space component props > test space justify 1`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: flex-start; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 0px;\\">
    <div>child</div>
  </div>
</div>"
`;

exports[`test space component props > test space justify 2`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: flex-end; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 0px;\\">
    <div>child</div>
  </div>
</div>"
`;

exports[`test space component props > test space justify 3`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: center; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 0px;\\">
    <div>child</div>
  </div>
</div>"
`;

exports[`test space component props > test space justify 4`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: space-around; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 6px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 6px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 6px;\\">
    <div>child</div>
  </div>
</div>"
`;

exports[`test space component props > test space justify 5`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: space-between; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 6px 4px 0px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 6px;\\">
    <div>child</div>
  </div>
  <div style=\\"margin: 4px 0px 4px 6px;\\">
    <div>child</div>
  </div>
</div>"
`;
